# aws-log-parser

./: .gitignore  .tool-versions  LICENSE  README.md  aws-log-parser.py  main.py  pyproject.toml  requirements.txt
src/aws_log_parser/: aws_log_parser.py
tests/: aws_log_parser_test.py
