[tool.poetry]
name = "aws-log-parser"
version = "0.1.0"
description = "A tool to parse the logs produced by aws services"
authors = ["HarshavardhanGowda <harsha7697@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aws_log_parser"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
