[tool.poetry]
name = "aws-log-parser"
version = "0.1.0"
description = "A log parser for parsing logs by aws agents of DRS, MGN and SSM service"
authors = ["HarshavardhanGowda <harsha7697@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.4"
structlog = "^23.1.0"

[tool.poetry.scripts]
aws-log-parser = 'aws_log_parser.aws_log_parser:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
